* Implemented correct composite attributes